unpackaged/main/default/objects/zkmulti__MCShipmateScheduledJobsSettings__c/zkmulti__MCShipmateScheduledJobsSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Stores ZenKraft Shipmate app custom settings for scheduled apex jobs. There should only be one record max per org. Do not create a record manually or edit it manually. Use the interface available on the Shipments Tab.</description>
    <label>Shipmate Scheduled Jobs Settings</label>
</CustomObject>