unpackaged/main/default/objects/zkmulti__MCShipmateScheduledJobsSettings__c/fields/zkmulti__ScheduledTrackFriTracking__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__ScheduledTrackFriTracking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scheduled Track Fri Tracking</label>
    <type>Checkbox</type>
</CustomField>