unpackaged/main/default/objects/zkmulti__MCShipmateScheduledJobsSettings__c/fields/zkmulti__ScheduledTrackMonTracking__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__ScheduledTrackMonTracking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scheduled Track Mon Tracking</label>
    <type>Checkbox</type>
</CustomField>