unpackaged/main/default/objects/zkmulti__MCShipmateScheduledJobsSettings__c/fields/zkmulti__ScheduledTrackSatTracking__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__ScheduledTrackSatTracking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scheduled Track Sat Tracking</label>
    <type>Checkbox</type>
</CustomField>