unpackaged/main/default/objects/zkmulti__MCShipmateScheduledJobsSettings__c/fields/zkmulti__ScheduledTrackSunTracking__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__ScheduledTrackSunTracking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scheduled Track Sun Tracking</label>
    <type>Checkbox</type>
</CustomField>