unpackaged/main/default/objects/zkmulti__MCShipmateScheduledJobsSettings__c/fields/zkmulti__ScheduledTrackThursTracking__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__ScheduledTrackThursTracking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scheduled Track Thurs Tracking</label>
    <type>Checkbox</type>
</CustomField>