unpackaged/main/default/objects/zkmulti__MCShipmateScheduledJobsSettings__c/fields/zkmulti__ScheduledTrackTuesTracking__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__ScheduledTrackTuesTracking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scheduled Track Tues Tracking</label>
    <type>Checkbox</type>
</CustomField>