unpackaged/main/default/objects/zkmulti__MCShipmateScheduledJobsSettings__c/fields/zkmulti__ScheduledTrackWedTracking__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__ScheduledTrackWedTracking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scheduled Track Wed Tracking</label>
    <type>Checkbox</type>
</CustomField>